--- a/src/css/global.css
+++ b/src/css/global.css
@@ -202,3 +202,30 @@ body {
   bottom: 45px;
   left: 200px;
 }
+
+@keyframes meteor {
+  0% {
+    transform: translate(0, 0) scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: translate(1800px, 1800px) scale(0.2); 
+    opacity: 0;
+  }
+}
+
+.meteor {
+  position: absolute;
+  animation: meteor 4s linear infinite;
+  opacity: 0;
+  pointer-events: none;
+  filter: drop-shadow(0 0 50px #ffd700); 
+  width: 50px; 
+  height: 50px;
+}
+
+.meteor svg {
+  width: 100%;
+  height: 100%;
+}
+
