--- a/src/css/ProjectsPage.css
+++ b/src/css/ProjectsPage.css
@@ -90,3 +90,16 @@
   border-radius: 10px;
   margin-bottom: 1rem;
 }
+
+.speech-bubble {
+  position: absolute;
+  background: #ffffff;
+  border: 2px solid #7ed957;
+  border-radius: 1em;
+  padding: 10px 15px;
+  max-width: 300px;
+  font-size: 14px;
+  color: #333;
+  bottom: 75px;
+  left: 200px;
+}
